c_compiler/src/maths_parser.output
Terminals unused in grammar

   ELLIPSIS
   ENUM
   SHORT


Rules useless in parser due to conflicts

  154 TYPE_QUALIFIER_LIST: %empty


State 0 conflicts: 2 shift/reduce
State 1 conflicts: 1 shift/reduce
State 21 conflicts: 2 shift/reduce
State 25 conflicts: 3 shift/reduce
State 26 conflicts: 3 shift/reduce
State 27 conflicts: 2 shift/reduce
State 29 conflicts: 3 shift/reduce
State 48 conflicts: 21 reduce/reduce
State 50 conflicts: 2 shift/reduce
State 51 conflicts: 2 shift/reduce
State 52 conflicts: 2 shift/reduce
State 60 conflicts: 2 shift/reduce
State 61 conflicts: 2 shift/reduce
State 68 conflicts: 3 shift/reduce
State 69 conflicts: 3 shift/reduce
State 108 conflicts: 2 shift/reduce
State 109 conflicts: 2 shift/reduce
State 112 conflicts: 2 shift/reduce
State 115 conflicts: 2 shift/reduce
State 122 conflicts: 1 shift/reduce, 3 reduce/reduce
State 198 conflicts: 2 shift/reduce
State 291 conflicts: 1 shift/reduce


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: TRANSLATION_UNIT

    2 TRANSLATION_UNIT: EXTERNAL_DECLARATION

    3 EXTERNAL_DECLARATION: FUNCTION
    4                     | EXTERNAL_DECLARATION FUNCTION
    5                     | DECLARATION
    6                     | EXTERNAL_DECLARATION DECLARATION

    7 FUNCTION: DECLARATION_SPECIFIERS T_VARIABLE T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
    8         | DECLARATION_SPECIFIERS T_VARIABLE T_LBRACKET PARAMETERS_LIST T_RBRACKET COMPOUND_STATEMENT
    9         | DECLARATION_SPECIFIERS T_VARIABLE T_RBRACKET PARAMETERS_LIST T_RBRACKET SEMICOLUMN
   10         | DECLARATION_SPECIFIERS POINTER T_VARIABLE T_RBRACKET PARAMETERS_LIST T_RBRACKET COMPOUND_STATEMENT
   11         | DECLARATION_SPECIFIERS POINTER T_VARIABLE T_LBRACKET T_RBRACKET COMPOUND_STATEMENT

   12 PARAMETERS: SPECIFIER_QUANTIFIER_LIST T_VARIABLE
   13           | SPECIFIER_QUANTIFIER_LIST POINTER T_VARIABLE
   14           | SPECIFIER_QUANTIFIER_LIST T_VARIABLE MIDDLE_LBRACKET CONSTANT_EXPRESSION MIDDLE_RBRACKET

   15 PARAMETERS_LIST: PARAMETERS
   16                | PARAMETERS_LIST COMMA PARAMETERS

   17 SPECIFIER_QUANTIFIER_LIST: TYPE_SPECIFIER SPECIFIER_QUANTIFIER_LIST
   18                          | TYPE_SPECIFIER
   19                          | TYPE_QUALIFIER SPECIFIER_QUANTIFIER_LIST
   20                          | TYPE_QUALIFIER

   21 COMPOUND_STATEMENT: LARGE_RBRACKET LARGE_MBRACKET
   22                   | LARGE_RBRACKET STATEMENT_LIST LARGE_MBRACKET
   23                   | LARGE_RBRACKET DECLARATION_LIST LARGE_MBRACKET
   24                   | LARGE_RBRACKET DECLARATION_LIST STATEMENT_LIST LARGE_MBRACKET

   25 STATEMENT_LIST: STATEMENT
   26               | STATEMENT_LIST STATEMENT

   27 STATEMENT: JUMP_STATEMENT
   28          | COMPOUND_STATEMENT
   29          | SELECTION_STATEMENT
   30          | ITERATION_STATEMENT
   31          | EXPRESSION_STATEMENT
   32          | LABEL_STATEMENT

   33 LABEL_STATEMENT: T_VARIABLE COLON STATEMENT
   34                | CASE CONDITIONAL_EXPRESSION COLON STATEMENT
   35                | DEFAULT COLON STATEMENT

   36 JUMP_STATEMENT: RETURN SEMICOLUMN
   37               | RETURN EXPRESSION SEMICOLUMN
   38               | GOTO T_VARIABLE SEMICOLUMN
   39               | CONTINUE SEMICOLUMN
   40               | BREAK SEMICOLUMN

   41 ITERATION_STATEMENT: WHILE T_LBRACKET EXPRESSION T_RBRACKET STATEMENT
   42                    | DO STATEMENT WHILE T_LBRACKET EXPRESSION T_RBRACKET SEMICOLUMN
   43                    | FOR T_LBRACKET EXPRESSION_STATEMENT EXPRESSION_STATEMENT T_RBRACKET STATEMENT
   44                    | FOR T_LBRACKET EXPRESSION_STATEMENT EXPRESSION_STATEMENT EXPRESSION T_RBRACKET STATEMENT

   45 SELECTION_STATEMENT: IF T_LBRACKET EXPRESSION T_RBRACKET STATEMENT
   46                    | IF T_LBRACKET EXPRESSION T_RBRACKET STATEMENT ELSE STATEMENT
   47                    | SWITCH T_LBRACKET EXPRESSION T_RBRACKET STATEMENT

   48 EXPRESSION_STATEMENT: SEMICOLUMN
   49                     | EXPRESSION SEMICOLUMN

   50 EXPRESSION: ASSIGNMENT_EXRRESSION
   51           | EXPRESSION COMMA ASSIGNMENT_EXRRESSION

   52 DECLARATION_LIST: DECLARATION
   53                 | DECLARATION_LIST DECLARATION

   54 DECLARATION: DECLARATION_SPECIFIERS SEMICOLUMN
   55            | DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST SEMICOLUMN

   56 DECLARATION_SPECIFIERS: TYPE_SPECIFIER
   57                       | TYPE_SPECIFIER DECLARATION_SPECIFIERS
   58                       | TYPE_QUALIFIER
   59                       | TYPE_QUALIFIER DECLARATION_SPECIFIERS
   60                       | STORAGE_CLASS_SPECIFIER
   61                       | STORAGE_CLASS_SPECIFIER DECLARATION_SPECIFIERS

   62 INIT_DECLARATOR_LIST: INIT_DECLARATOR
   63                     | INIT_DECLARATOR_LIST COMMA INIT_DECLARATOR

   64 INIT_DECLARATOR: DECLARATOR
   65                | DECLARATOR EQUAL INITIALIZER

   66 DECLARATOR: DIRECT_DECLARATOR

   67 INITIALIZER: ASSIGNMENT_EXRRESSION
   68            | LARGE_RBRACKET INITIALIZER_LIST LARGE_MBRACKET
   69            | LARGE_RBRACKET INITIALIZER_LIST COMMA LARGE_MBRACKET

   70 INITIALIZER_LIST: INITIALIZER
   71                 | INITIALIZER_LIST COMMA INITIALIZER

   72 TYPE_QUALIFIER: CONST
   73               | VIOLATILE

   74 STORAGE_CLASS_SPECIFIER: TYPEDEF
   75                        | EXTERN
   76                        | STATIC
   77                        | AUTO
   78                        | REGISTER

   79 DIRECT_DECLARATOR: T_VARIABLE
   80                  | T_LBRACKET DECLARATOR T_RBRACKET
   81                  | T_VARIABLE MIDDLE_LBRACKET CONSTANT_EXPRESSION MIDDLE_RBRACKET

   82 CONSTANT_EXPRESSION: CONDITIONAL_EXPRESSION

   83 ASSIGNMENT_EXRRESSION: CONDITIONAL_EXPRESSION
   84                      | UNARY_EXPRESSION ASSIGNMENT_OPERATOR ASSIGNMENT_EXRRESSION

   85 CONDITIONAL_EXPRESSION: LOGICAL_OR_EXPRESSION
   86                       | LOGICAL_OR_EXPRESSION QUESTION EXPRESSION COLON CONDITIONAL_EXPRESSION

   87 LOGICAL_OR_EXPRESSION: LOGICAL_AND_EXPRESSION
   88                      | LOGICAL_OR_EXPRESSION OR_OP LOGICAL_AND_EXPRESSION

   89 LOGICAL_AND_EXPRESSION: INCLUSIVE_OR_EXPRESSION
   90                       | LOGICAL_AND_EXPRESSION AND_OP INCLUSIVE_OR_EXPRESSION

   91 INCLUSIVE_OR_EXPRESSION: EXCLUSIVE_OR_EXPRESSION
   92                        | INCLUSIVE_OR_EXPRESSION OR EXCLUSIVE_OR_EXPRESSION

   93 EXCLUSIVE_OR_EXPRESSION: AND_EXPRESSION
   94                        | EXCLUSIVE_OR_EXPRESSION T_EXPONENT AND_EXPRESSION

   95 AND_EXPRESSION: EQUALITY_EXPRESSION
   96               | AND_EXPRESSION AND EQUALITY_EXPRESSION

   97 EQUALITY_EXPRESSION: RELATIONAL_EXPRESSION
   98                    | EQUALITY_EXPRESSION EQ_OP RELATIONAL_EXPRESSION
   99                    | EQUALITY_EXPRESSION NE_OP RELATIONAL_EXPRESSION

  100 RELATIONAL_EXPRESSION: SHIFT_EXPRESSION
  101                      | RELATIONAL_EXPRESSION SMALLER SHIFT_EXPRESSION
  102                      | RELATIONAL_EXPRESSION LARGER SHIFT_EXPRESSION
  103                      | RELATIONAL_EXPRESSION LE_OP SHIFT_EXPRESSION
  104                      | RELATIONAL_EXPRESSION GE_OP SHIFT_EXPRESSION

  105 SHIFT_EXPRESSION: ADDITIVE_EXPRESSION
  106                 | SHIFT_EXPRESSION LEFT_OP ADDITIVE_EXPRESSION
  107                 | SHIFT_EXPRESSION RIGHT_OP ADDITIVE_EXPRESSION

  108 ADDITIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION
  109                    | ADDITIVE_EXPRESSION T_PLUS MULTIPLICATIVE_EXPRESSION
  110                    | ADDITIVE_EXPRESSION T_MINUS MULTIPLICATIVE_EXPRESSION

  111 MULTIPLICATIVE_EXPRESSION: CAST_EXPRESSION
  112                          | MULTIPLICATIVE_EXPRESSION T_TIMES CAST_EXPRESSION
  113                          | MULTIPLICATIVE_EXPRESSION T_DIVIDE CAST_EXPRESSION
  114                          | MULTIPLICATIVE_EXPRESSION PERCENTAGE CAST_EXPRESSION

  115 CAST_EXPRESSION: UNARY_EXPRESSION
  116                | T_LBRACKET TYPE_NAME T_RBRACKET CAST_EXPRESSION

  117 TYPE_NAME: TYPE_SPECIFIER

  118 UNARY_EXPRESSION: POSTFIX_EXPRESSION
  119                 | INC_OP UNARY_EXPRESSION
  120                 | DEC_OP UNARY_EXPRESSION
  121                 | UNARY_OPERATOR CAST_EXPRESSION
  122                 | SIZEOF UNARY_EXPRESSION
  123                 | SIZEOF T_LBRACKET TYPE_NAME T_RBRACKET

  124 ARGUMENT_EXPRESSION_LIST: ASSIGNMENT_EXRRESSION
  125                         | ARGUMENT_EXPRESSION_LIST COMMA ASSIGNMENT_EXRRESSION

  126 POSTFIX_EXPRESSION: PRIMARY_EXPRESSION
  127                   | POSTFIX_EXPRESSION T_LBRACKET T_RBRACKET
  128                   | POSTFIX_EXPRESSION T_LBRACKET ARGUMENT_EXPRESSION_LIST T_RBRACKET
  129                   | POSTFIX_EXPRESSION DOT T_VARIABLE
  130                   | POSTFIX_EXPRESSION PTR_OP T_VARIABLE
  131                   | POSTFIX_EXPRESSION INC_OP
  132                   | POSTFIX_EXPRESSION DEC_OP

  133 PRIMARY_EXPRESSION: T_NUMBER
  134                   | T_VARIABLE
  135                   | T_LBRACKET EXPRESSION T_RBRACKET
  136                   | T_VARIABLE MIDDLE_LBRACKET EXPRESSION MIDDLE_RBRACKET

  137 ASSIGNMENT_OPERATOR: EQUAL
  138                    | MUL_ASSIGN
  139                    | DIV_ASSIGN
  140                    | MOD_ASSIGN
  141                    | ADD_ASSIGN
  142                    | SUB_ASSIGN
  143                    | LEFT_ASSIGN
  144                    | RIGHT_ASSIGN
  145                    | AND_ASSIGN
  146                    | XOR_ASSIGN
  147                    | OR_ASSIGN

  148 UNARY_OPERATOR: AND
  149               | T_TIMES
  150               | T_PLUS
  151               | T_MINUS
  152               | TIDLE
  153               | EXCLANATION

  154 TYPE_QUALIFIER_LIST: %empty

  155 TYPE_QUALIFIER: TYPE_QUALIFIER_LIST TYPE_QUALIFIER

  156 POINTER: T_TIMES
  157        | T_TIMES POINTER

  158 TYPE_SPECIFIER: VOID
  159               | CHAR
  160               | INT
  161               | LONG
  162               | FLOAT
  163               | DOUBLE
  164               | SIGNED
  165               | UNSIGNED
  166               | POINTER
  167               | TYPE_SPECIFIER POINTER
  168               | STRUCT_OR_UNION_SPECIFIER

  169 STRUCT_OR_UNION_SPECIFIER: STRUCT_OR_UNION T_VARIABLE LARGE_RBRACKET DECLARATION_LIST LARGE_MBRACKET
  170                          | STRUCT_OR_UNION LARGE_RBRACKET DECLARATION_LIST LARGE_MBRACKET
  171                          | STRUCT_OR_UNION T_VARIABLE

  172 STRUCT_OR_UNION: STRUCT
  173                | UNION


Terminals, with rules where they appear

$end (0) 0
error (256)
T_NUMBER (258) 133
T_VARIABLE (259) 7 8 9 10 11 12 13 14 33 38 79 81 129 130 134 136 169
    171
T_LBRACKET (260) 7 8 11 41 42 43 44 45 46 47 80 116 123 127 128 135
T_RBRACKET (261) 7 8 9 10 11 41 42 43 44 45 46 47 80 116 123 127 128
    135
T_TIMES (262) 112 149 156 157
T_DIVIDE (263) 113
T_PLUS (264) 109 150
T_MINUS (265) 110 151
T_EXPONENT (266) 94
MIDDLE_RBRACKET (267) 14 81 136
MIDDLE_LBRACKET (268) 14 81 136
DOT (269) 129
AND (270) 96 148
EXCLANATION (271) 153
TIDLE (272) 152
PERCENTAGE (273) 114
SMALLER (274) 101
LARGER (275) 102
OR (276) 92
QUESTION (277) 86
ELLIPSIS (278)
RIGHT_ASSIGN (279) 144
LEFT_ASSIGN (280) 143
ADD_ASSIGN (281) 141
SUB_ASSIGN (282) 142
MUL_ASSIGN (283) 138
DIV_ASSIGN (284) 139
MOD_ASSIGN (285) 140
AND_ASSIGN (286) 145
XOR_ASSIGN (287) 146
OR_ASSIGN (288) 147
RIGHT_OP (289) 107
LEFT_OP (290) 106
INC_OP (291) 119 131
DEC_OP (292) 120 132
PTR_OP (293) 130
AND_OP (294) 90
OR_OP (295) 88
LE_OP (296) 103
GE_OP (297) 104
EQ_OP (298) 98
NE_OP (299) 99
SEMICOLUMN (300) 9 36 37 38 39 40 42 48 49 54 55
LARGE_RBRACKET (301) 21 22 23 24 68 69 169 170
LARGE_MBRACKET (302) 21 22 23 24 68 69 169 170
COMMA (303) 16 51 63 69 71 125
COLON (304) 33 34 35 86
EQUAL (305) 65 137
AUTO (306) 77
BREAK (307) 40
CASE (308) 34
CHAR (309) 159
CONST (310) 72
CONTINUE (311) 39
DEFAULT (312) 35
DO (313) 42
DOUBLE (314) 163
ELSE (315) 46
ENUM (316)
EXTERN (317) 75
FLOAT (318) 162
FOR (319) 43 44
GOTO (320) 38
IF (321) 45 46
INT (322) 160
LONG (323) 161
REGISTER (324) 78
RETURN (325) 36 37
SHORT (326)
SIGNED (327) 164
SIZEOF (328) 122 123
STATIC (329) 76
STRUCT (330) 172
SWITCH (331) 47
TYPEDEF (332) 74
UNION (333) 173
UNSIGNED (334) 165
VOID (335) 158
VIOLATILE (336) 73
WHILE (337) 41 42


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
PROGRAM (84)
    on left: 1, on right: 0
TRANSLATION_UNIT (85)
    on left: 2, on right: 1
EXTERNAL_DECLARATION (86)
    on left: 3 4 5 6, on right: 2 4 6
FUNCTION (87)
    on left: 7 8 9 10 11, on right: 3 4
PARAMETERS (88)
    on left: 12 13 14, on right: 15 16
PARAMETERS_LIST (89)
    on left: 15 16, on right: 8 9 10 16
SPECIFIER_QUANTIFIER_LIST (90)
    on left: 17 18 19 20, on right: 12 13 14 17 19
COMPOUND_STATEMENT (91)
    on left: 21 22 23 24, on right: 7 8 10 11 28
STATEMENT_LIST (92)
    on left: 25 26, on right: 22 24 26
STATEMENT (93)
    on left: 27 28 29 30 31 32, on right: 25 26 33 34 35 41 42 43 44
    45 46 47
LABEL_STATEMENT (94)
    on left: 33 34 35, on right: 32
JUMP_STATEMENT (95)
    on left: 36 37 38 39 40, on right: 27
ITERATION_STATEMENT (96)
    on left: 41 42 43 44, on right: 30
SELECTION_STATEMENT (97)
    on left: 45 46 47, on right: 29
EXPRESSION_STATEMENT (98)
    on left: 48 49, on right: 31 43 44
EXPRESSION (99)
    on left: 50 51, on right: 37 41 42 44 45 46 47 49 51 86 135 136
DECLARATION_LIST (100)
    on left: 52 53, on right: 23 24 53 169 170
DECLARATION (101)
    on left: 54 55, on right: 5 6 52 53
DECLARATION_SPECIFIERS (102)
    on left: 56 57 58 59 60 61, on right: 7 8 9 10 11 54 55 57 59 61
INIT_DECLARATOR_LIST (103)
    on left: 62 63, on right: 55 63
INIT_DECLARATOR (104)
    on left: 64 65, on right: 62 63
DECLARATOR (105)
    on left: 66, on right: 64 65 80
INITIALIZER (106)
    on left: 67 68 69, on right: 65 70 71
INITIALIZER_LIST (107)
    on left: 70 71, on right: 68 69 71
TYPE_QUALIFIER (108)
    on left: 72 73 155, on right: 19 20 58 59 155
STORAGE_CLASS_SPECIFIER (109)
    on left: 74 75 76 77 78, on right: 60 61
DIRECT_DECLARATOR (110)
    on left: 79 80 81, on right: 66
CONSTANT_EXPRESSION (111)
    on left: 82, on right: 14 81
ASSIGNMENT_EXRRESSION (112)
    on left: 83 84, on right: 50 51 67 84 124 125
CONDITIONAL_EXPRESSION (113)
    on left: 85 86, on right: 34 82 83 86
LOGICAL_OR_EXPRESSION (114)
    on left: 87 88, on right: 85 86 88
LOGICAL_AND_EXPRESSION (115)
    on left: 89 90, on right: 87 88 90
INCLUSIVE_OR_EXPRESSION (116)
    on left: 91 92, on right: 89 90 92
EXCLUSIVE_OR_EXPRESSION (117)
    on left: 93 94, on right: 91 92 94
AND_EXPRESSION (118)
    on left: 95 96, on right: 93 94 96
EQUALITY_EXPRESSION (119)
    on left: 97 98 99, on right: 95 96 98 99
RELATIONAL_EXPRESSION (120)
    on left: 100 101 102 103 104, on right: 97 98 99 101 102 103 104
SHIFT_EXPRESSION (121)
    on left: 105 106 107, on right: 100 101 102 103 104 106 107
ADDITIVE_EXPRESSION (122)
    on left: 108 109 110, on right: 105 106 107 109 110
MULTIPLICATIVE_EXPRESSION (123)
    on left: 111 112 113 114, on right: 108 109 110 112 113 114
CAST_EXPRESSION (124)
    on left: 115 116, on right: 111 112 113 114 116 121
TYPE_NAME (125)
    on left: 117, on right: 116 123
UNARY_EXPRESSION (126)
    on left: 118 119 120 121 122 123, on right: 84 115 119 120 122
ARGUMENT_EXPRESSION_LIST (127)
    on left: 124 125, on right: 125 128
POSTFIX_EXPRESSION (128)
    on left: 126 127 128 129 130 131 132, on right: 118 127 128 129
    130 131 132
PRIMARY_EXPRESSION (129)
    on left: 133 134 135 136, on right: 126
ASSIGNMENT_OPERATOR (130)
    on left: 137 138 139 140 141 142 143 144 145 146 147, on right:
    84
UNARY_OPERATOR (131)
    on left: 148 149 150 151 152 153, on right: 121
TYPE_QUALIFIER_LIST (132)
    on left: 154, on right: 155
POINTER (133)
    on left: 156 157, on right: 10 11 13 157 166 167
TYPE_SPECIFIER (134)
    on left: 158 159 160 161 162 163 164 165 166 167 168, on right:
    17 18 56 57 117 167
STRUCT_OR_UNION_SPECIFIER (135)
    on left: 169 170 171, on right: 168
STRUCT_OR_UNION (136)
    on left: 172 173, on right: 169 170 171


State 0

    0 $accept: . PROGRAM $end

    T_TIMES    shift, and go to state 1
    AUTO       shift, and go to state 2
    CHAR       shift, and go to state 3
    CONST      shift, and go to state 4
    DOUBLE     shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    REGISTER   shift, and go to state 10
    SIGNED     shift, and go to state 11
    STATIC     shift, and go to state 12
    STRUCT     shift, and go to state 13
    TYPEDEF    shift, and go to state 14
    UNION      shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VIOLATILE  shift, and go to state 18

    CONST      [reduce using rule 154 (TYPE_QUALIFIER_LIST)]
    VIOLATILE  [reduce using rule 154 (TYPE_QUALIFIER_LIST)]

    PROGRAM                    go to state 19
    TRANSLATION_UNIT           go to state 20
    EXTERNAL_DECLARATION       go to state 21
    FUNCTION                   go to state 22
    DECLARATION                go to state 23
    DECLARATION_SPECIFIERS     go to state 24
    TYPE_QUALIFIER             go to state 25
    STORAGE_CLASS_SPECIFIER    go to state 26
    TYPE_QUALIFIER_LIST        go to state 27
    POINTER                    go to state 28
    TYPE_SPECIFIER             go to state 29
    STRUCT_OR_UNION_SPECIFIER  go to state 30
    STRUCT_OR_UNION            go to state 31


State 1

  156 POINTER: T_TIMES .
  157        | T_TIMES . POINTER

    T_TIMES  shift, and go to state 1

    T_TIMES   [reduce using rule 156 (POINTER)]
    $default  reduce using rule 156 (POINTER)

    POINTER  go to state 32


State 2

   77 STORAGE_CLASS_SPECIFIER: AUTO .

    $default  reduce using rule 77 (STORAGE_CLASS_SPECIFIER)


State 3

  159 TYPE_SPECIFIER: CHAR .

    $default  reduce using rule 159 (TYPE_SPECIFIER)


State 4

   72 TYPE_QUALIFIER: CONST .

    $default  reduce using rule 72 (TYPE_QUALIFIER)


State 5

  163 TYPE_SPECIFIER: DOUBLE .

    $default  reduce using rule 163 (TYPE_SPECIFIER)


State 6

   75 STORAGE_CLASS_SPECIFIER: EXTERN .

    $default  reduce using rule 75 (STORAGE_CLASS_SPECIFIER)


State 7

  162 TYPE_SPECIFIER: FLOAT .

    $default  reduce using rule 162 (TYPE_SPECIFIER)


State 8

  160 TYPE_SPECIFIER: INT .

    $default  reduce using rule 160 (TYPE_SPECIFIER)


State 9

  161 TYPE_SPECIFIER: LONG .

    $default  reduce using rule 161 (TYPE_SPECIFIER)


State 10

   78 STORAGE_CLASS_SPECIFIER: REGISTER .

    $default  reduce using rule 78 (STORAGE_CLASS_SPECIFIER)


State 11

  164 TYPE_SPECIFIER: SIGNED .

    $default  reduce using rule 164 (TYPE_SPECIFIER)


State 12

   76 STORAGE_CLASS_SPECIFIER: STATIC .

    $default  reduce using rule 76 (STORAGE_CLASS_SPECIFIER)


State 13

  172 STRUCT_OR_UNION: STRUCT .

    $default  reduce using rule 172 (STRUCT_OR_UNION)


State 14

   74 STORAGE_CLASS_SPECIFIER: TYPEDEF .

    $default  reduce using rule 74 (STORAGE_CLASS_SPECIFIER)


State 15

  173 STRUCT_OR_UNION: UNION .

    $default  reduce using rule 173 (STRUCT_OR_UNION)


State 16

  165 TYPE_SPECIFIER: UNSIGNED .

    $default  reduce using rule 165 (TYPE_SPECIFIER)


State 17

  158 TYPE_SPECIFIER: VOID .

    $default  reduce using rule 158 (TYPE_SPECIFIER)


State 18

   73 TYPE_QUALIFIER: VIOLATILE .

    $default  reduce using rule 73 (TYPE_QUALIFIER)


State 19

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 33


State 20

    1 PROGRAM: TRANSLATION_UNIT .

    $default  reduce using rule 1 (PROGRAM)


State 21

    2 TRANSLATION_UNIT: EXTERNAL_DECLARATION .
    4 EXTERNAL_DECLARATION: EXTERNAL_DECLARATION . FUNCTION
    6                     | EXTERNAL_DECLARATION . DECLARATION

    T_TIMES    shift, and go to state 1
    AUTO       shift, and go to state 2
    CHAR       shift, and go to state 3
    CONST      shift, and go to state 4
    DOUBLE     shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    REGISTER   shift, and go to state 10
    SIGNED     shift, and go to state 11
    STATIC     shift, and go to state 12
    STRUCT     shift, and go to state 13
    TYPEDEF    shift, and go to state 14
    UNION      shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VIOLATILE  shift, and go to state 18

    CONST      [reduce using rule 154 (TYPE_QUALIFIER_LIST)]
    VIOLATILE  [reduce using rule 154 (TYPE_QUALIFIER_LIST)]
    $default   reduce using rule 2 (TRANSLATION_UNIT)

    FUNCTION                   go to state 34
    DECLARATION                go to state 35
    DECLARATION_SPECIFIERS     go to state 24
    TYPE_QUALIFIER             go to state 25
    STORAGE_CLASS_SPECIFIER    go to state 26
    TYPE_QUALIFIER_LIST        go to state 27
    POINTER                    go to state 28
    TYPE_SPECIFIER             go to state 29
    STRUCT_OR_UNION_SPECIFIER  go to state 30
    STRUCT_OR_UNION            go to state 31


State 22

    3 EXTERNAL_DECLARATION: FUNCTION .

    $default  reduce using rule 3 (EXTERNAL_DECLARATION)


State 23

    5 EXTERNAL_DECLARATION: DECLARATION .

    $default  reduce using rule 5 (EXTERNAL_DECLARATION)


State 24

    7 FUNCTION: DECLARATION_SPECIFIERS . T_VARIABLE T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
    8         | DECLARATION_SPECIFIERS . T_VARIABLE T_LBRACKET PARAMETERS_LIST T_RBRACKET COMPOUND_STATEMENT
    9         | DECLARATION_SPECIFIERS . T_VARIABLE T_RBRACKET PARAMETERS_LIST T_RBRACKET SEMICOLUMN
   10         | DECLARATION_SPECIFIERS . POINTER T_VARIABLE T_RBRACKET PARAMETERS_LIST T_RBRACKET COMPOUND_STATEMENT
   11         | DECLARATION_SPECIFIERS . POINTER T_VARIABLE T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
   54 DECLARATION: DECLARATION_SPECIFIERS . SEMICOLUMN
   55            | DECLARATION_SPECIFIERS . INIT_DECLARATOR_LIST SEMICOLUMN

    T_VARIABLE  shift, and go to state 36
    T_LBRACKET  shift, and go to state 37
    T_TIMES     shift, and go to state 1
    SEMICOLUMN  shift, and go to state 38

    INIT_DECLARATOR_LIST  go to state 39
    INIT_DECLARATOR       go to state 40
    DECLARATOR            go to state 41
    DIRECT_DECLARATOR     go to state 42
    POINTER               go to state 43


State 25

   58 DECLARATION_SPECIFIERS: TYPE_QUALIFIER .
   59                       | TYPE_QUALIFIER . DECLARATION_SPECIFIERS

    T_TIMES    shift, and go to state 1
    AUTO       shift, and go to state 2
    CHAR       shift, and go to state 3
    CONST      shift, and go to state 4
    DOUBLE     shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    REGISTER   shift, and go to state 10
    SIGNED     shift, and go to state 11
    STATIC     shift, and go to state 12
    STRUCT     shift, and go to state 13
    TYPEDEF    shift, and go to state 14
    UNION      shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VIOLATILE  shift, and go to state 18

    T_TIMES    [reduce using rule 58 (DECLARATION_SPECIFIERS)]
    CONST      [reduce using rule 154 (TYPE_QUALIFIER_LIST)]
    VIOLATILE  [reduce using rule 154 (TYPE_QUALIFIER_LIST)]
    $default   reduce using rule 58 (DECLARATION_SPECIFIERS)

    DECLARATION_SPECIFIERS     go to state 44
    TYPE_QUALIFIER             go to state 25
    STORAGE_CLASS_SPECIFIER    go to state 26
    TYPE_QUALIFIER_LIST        go to state 27
    POINTER                    go to state 28
    TYPE_SPECIFIER             go to state 29
    STRUCT_OR_UNION_SPECIFIER  go to state 30
    STRUCT_OR_UNION            go to state 31


State 26

   60 DECLARATION_SPECIFIERS: STORAGE_CLASS_SPECIFIER .
   61                       | STORAGE_CLASS_SPECIFIER . DECLARATION_SPECIFIERS

    T_TIMES    shift, and go to state 1
    AUTO       shift, and go to state 2
    CHAR       shift, and go to state 3
    CONST      shift, and go to state 4
    DOUBLE     shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    REGISTER   shift, and go to state 10
    SIGNED     shift, and go to state 11
    STATIC     shift, and go to state 12
    STRUCT     shift, and go to state 13
    TYPEDEF    shift, and go to state 14
    UNION      shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VIOLATILE  shift, and go to state 18

    T_TIMES    [reduce using rule 60 (DECLARATION_SPECIFIERS)]
    CONST      [reduce using rule 154 (TYPE_QUALIFIER_LIST)]
    VIOLATILE  [reduce using rule 154 (TYPE_QUALIFIER_LIST)]
    $default   reduce using rule 60 (DECLARATION_SPECIFIERS)

    DECLARATION_SPECIFIERS     go to state 45
    TYPE_QUALIFIER             go to state 25
    STORAGE_CLASS_SPECIFIER    go to state 26
    TYPE_QUALIFIER_LIST        go to state 27
    POINTER                    go to state 28
    TYPE_SPECIFIER             go to state 29
    STRUCT_OR_UNION_SPECIFIER  go to state 30
    STRUCT_OR_UNION            go to state 31


State 27

  155 TYPE_QUALIFIER: TYPE_QUALIFIER_LIST . TYPE_QUALIFIER

    CONST      shift, and go to state 4
    VIOLATILE  shift, and go to state 18

    CONST      [reduce using rule 154 (TYPE_QUALIFIER_LIST)]
    VIOLATILE  [reduce using rule 154 (TYPE_QUALIFIER_LIST)]

    TYPE_QUALIFIER       go to state 46
    TYPE_QUALIFIER_LIST  go to state 27


State 28

  166 TYPE_SPECIFIER: POINTER .

    $default  reduce using rule 166 (TYPE_SPECIFIER)


State 29

   56 DECLARATION_SPECIFIERS: TYPE_SPECIFIER .
   57                       | TYPE_SPECIFIER . DECLARATION_SPECIFIERS
  167 TYPE_SPECIFIER: TYPE_SPECIFIER . POINTER

    T_TIMES    shift, and go to state 1
    AUTO       shift, and go to state 2
    CHAR       shift, and go to state 3
    CONST      shift, and go to state 4
    DOUBLE     shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    REGISTER   shift, and go to state 10
    SIGNED     shift, and go to state 11
    STATIC     shift, and go to state 12
    STRUCT     shift, and go to state 13
    TYPEDEF    shift, and go to state 14
    UNION      shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VIOLATILE  shift, and go to state 18

    T_TIMES    [reduce using rule 56 (DECLARATION_SPECIFIERS)]
    CONST      [reduce using rule 154 (TYPE_QUALIFIER_LIST)]
    VIOLATILE  [reduce using rule 154 (TYPE_QUALIFIER_LIST)]
    $default   reduce using rule 56 (DECLARATION_SPECIFIERS)
